# Corpnet

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGE1.md  CHANGE2.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  _check_db.py  _tmp_body.json  archrag_api.postman_collection.json  config.example.yaml  config.yaml  corpus.jsonl  docker-compose.yml  embed_vectors.py  export_locally.py  pyproject.toml
app/: .env.local  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.css  App.tsx  index.css  main.tsx  router.tsx
arXiv-2502.12110v11/: neurips_2025.bbl
archrag/: __init__.py  api_server.py  cli.py  config.py  mcp_server.py  visualization.py
archrag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
archrag/agent/: __init__.py  connection_store.py  ingestion_agent.py  prompts.py  tools.py
archrag/api/: __init__.py  mock_llm.py  notes_routes.py  permissions.py  router.py  server.py  session.py
archrag/dataset/: sample_notes.json
archrag/domain/: models.py
archrag/ports/: clustering.py  document_store.py  embedding.py  external_database.py  graph_store.py  llm.py  memory_note_store.py  vector_index.py
archrag/prompts/: extraction.py  filtering.py  note_construction.py  summarization.py
archrag/services/: adaptive_filtering.py  auto_sync_worker.py  chnsw_build.py  database_sync.py  hierarchical_clustering.py  hierarchical_search.py  ingestion_queue.py  kg_construction.py  note_construction.py  orchestrator.py  sync_queue.py  unified_ingestion.py
archrag/visualization/: __init__.py  animated_tree.py  dendrogram.py  hierarchy_viz.py  multi_perspective.py
config/: default.yaml  test.yaml
consumer/: __init__.py  config.yaml  mcp_server.py
consumer/adapters/: __init__.py  stub_store.py
data/: archrag.db  archrag.db-shm  archrag.db-wal  chnsw_vectors.json  hierarchy_viz.html  mock_company.db
data/notes/: bulk_upload.jsonl  computer_science_notes.jsonl  finance_notes.jsonl  geology_notes.jsonl  law_notes.jsonl  physics_notes.jsonl  (+1 more)
docs/: DATA_INGESTION_PIPELINE.md  agentic_api_ref.md  consumer_api_ref.md  fastapi.md  notes_api_postman.md  producer_api_ref.md
producer/: __init__.py  api.py  config.yaml
proto/: dachrag.proto
scripts/: create_mock_db.py  detailed_conversion_example.md  example_conversion_flow.py  generate_notes.py  load_test.py  migrate_db.py  seed_data.py  test_db_sync.py  test_memory_notes.py
src/: __init__.py
supabase/: migration.sql
tests/: __init__.py  conftest.py  test_api.py  test_blue_green.py  test_chnsw.py  test_clustering.py  test_consumer_stubs.py  test_core.py  test_filtering.py  test_indexing.py  test_ingestion.py  test_kg_construction.py  test_models.py  test_networking.py  test_orchestrator.py  test_query.py  test_search.py
(+78 files in other folders)
